# todo_app_graphql

./: README.md  data.json  pyproject.toml
src/: api.py  data.py  models.py  resolvers.py  server.py  types.py
